# hms-cpap

./: .dockerignore  .env.example  .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.arm  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  NOTICE  PRIVACY.md  README.md  RELEASE.md  REPO_STRUCTURE.txt  TERMS.md  VERSION  build_and_deploy.sh  build_arm.sh  config.json.example  deploy_to_pi.sh  deploy_to_pi_native.sh  docker-compose.yml  llm_prompt.txt  mosquitto.conf  quickstart.sh  vcpkg.json
.github/workflows/: docker-build.yml
cmake/: arm-toolchain.cmake
dashboards/: cpap-monitor.yaml
docs/: CHECKPOINT_FILE_TRACKING.md  CPAP_ML_QUICKREF.md  CROSS_COMPILATION.md  FYSETC_RECEIVER.md  FYSETC_TCP_ARCHITECTURE.md  QA_findings_local_dir.md  QA_findings_poll_side.md  QA_fysetc_tcp_pass_1st.md  QA_fysetc_tcp_pass_1st_response.md  QA_fysetc_tcp_pass_2nd.md  QA_fysetc_tcp_pass_2nd_response.md  RESMED_WRITE_TIMING.md  SDD-001-advanced-signal-charts.md  SDD-002-full-card-oscar-residue.md  SDD-003-sleephq-debounced-export.md  SDD-004-equipment-profiles-and-supplies.md  UPLOAD.md
frontend/: .gitignore  package-lock.json  package.json  proxy-dev.json  proxy.conf.json
frontend/src/: index.html  styles.scss
include/agent/: AgentMemory.h  AgentService.h  AgentTools.h  IAgentLLM.h
include/clients/: EzShareClient.h  FysetcDataSource.h  FysetcHttpClient.h  FysetcProtocol.h  FysetcTcpServer.h  IDataSource.h  IO2RingClient.h  O2RingBleClient.h  O2RingClient.h  WiFiSwitchClient.h
include/controllers/: CpapController.h  EquipmentController.h
include/database/: DatabaseFactory.h  DatabaseService.h  IDatabase.h  MySQLDatabase.h  PostgresDatabase.h  SQLiteDatabase.h  SqlDialect.h
include/ml/: CrossValidator.h  DecisionTree.h  FeatureEngine.h  HmmSmoother.h  RandomForest.h  SleepStageFeatureExtractor.h  SleepStageTrainer.h  SleepStageTypes.h  StandardScaler.h
include/models/: CPAPModels.h
include/mqtt/: DiscoveryPublisher.h  MqttClient.h  SleepStageDiscovery.h
include/parsers/: CpapdashBridge.h  EDFParser.h  Fat32Parser.h  SleeplinkBridge.h
include/services/: BackfillService.h  BurstCollectorService.h  CpapDashSyncService.h  DataPublisherService.h  FysetcPollService.h  FysetcReceiverService.h  FysetcSectorCollectorService.h  FysetcSniffService.h  GnuplotService.h  InsightsEngine.h  LiveSleepStageRunner.h  MLTrainingService.h  O2RingCsvParser.h  OximetryService.h  PdfRenderer.h  PrismaIngestion.h  ReportGeneratorService.h  SessionDiscoveryService.h  SleepHqExportService.h  SleepStageClassifier.h  SupplyPublisher.h  SupplyStatus.h
include/utils/: AppConfig.h  CardResidue.h  ConfigManager.h  FailureLogThrottle.h  FileUtils.h  TimeCompat.h
include/web/: QueryService.h
scripts/: add_reports_table.sql  agent_schema.sql  build_frontend.sh  coverage.sh  ezshare-monitor.conf.example  ezshare-monitor.service  ezshare-monitor.sh  fix_session_ends.py  reparse_sessions.py  retrofit_bytes_to_kb.sql  schema.sql  schema_mysql.sql  schema_sqlite.sql  str_backfill.py
sql/: create_sniff_table.sql
src/: main.cpp
src/agent/: AgentMemory.cpp  AgentService.cpp  AgentTools.cpp
src/cli/: train_sleep_stage_main.cpp
src/clients/: EzShareClient.cpp  FysetcDataSource.cpp  FysetcHttpClient.cpp  FysetcTcpServer.cpp  O2RingBleClient.cpp  O2RingClient.cpp  WiFiSwitchClient.cpp
src/controllers/: CpapController.cpp  EquipmentController.cpp
src/database/: DatabaseService.cpp  MySQLDatabase.cpp  PostgresDatabase.cpp  SQLiteDatabase.cpp
src/ml/: DecisionTree.cpp  FeatureEngine.cpp  HmmSmoother.cpp  RandomForest.cpp  SleepStageFeatureExtractor.cpp  SleepStageTrainer.cpp
src/models/: CPAPModels.cpp
src/mqtt/: DiscoveryPublisher.cpp  MqttClient.cpp
src/parsers/: EDFParser.cpp  Fat32Parser.cpp
src/services/: BackfillService.cpp  BurstCollectorService.cpp  CpapDashSyncService.cpp  DataPublisherService.cpp  FysetcPollService.cpp  FysetcReceiverService.cpp  FysetcSectorCollectorService.cpp  FysetcSniffService.cpp  GnuplotService.cpp  InsightsEngine.cpp  LiveSleepStageRunner.cpp  MLTrainingService.cpp  O2RingCsvParser.cpp  OximetryService.cpp  PdfRenderer.cpp  PrismaIngestion.cpp  ReportGeneratorService.cpp  SessionDiscoveryService.cpp  SleepHqExportService.cpp  SleepStageClassifier.cpp  (+2 more)
tests/: CMakeLists.txt  EquipmentStubs.h
tests/agent/: test_AgentMemory.cpp  test_AgentService.cpp  test_AgentTools.cpp
tests/clients/: test_EzShareClient.cpp  test_FysetcDataSource.cpp  test_FysetcTcpServer.cpp  test_O2RingBleProtocol.cpp  test_O2RingClient.cpp
tests/controllers/: test_EquipmentController.cpp
tests/database/: test_DatabaseFactory.cpp  test_DatabaseService.cpp  test_DatabaseService_pg.cpp  test_EquipmentBackends.cpp  test_PostgresEdges.cpp  test_SQLiteDatabase.cpp
tests/fixtures/lowenstein_prod_samples/: README.md  sessions_export.csv
tests/fixtures/prisma/: signal_real.wmedf
tests/integration/: test_ASVIntegration.cpp  test_PrismaE2E.cpp  test_STRIntegration.cpp
tests/ml/: test_DecisionTree.cpp  test_FeatureEngine.cpp  test_MLTrainingService.cpp  test_RandomForest.cpp  test_StandardScaler.cpp  test_hmm_smoother.cpp  test_sleep_stage_feature_extractor.cpp  test_sleep_stage_trainer.cpp
tests/models/: test_CPAPModels.cpp
tests/mqtt/: test_DiscoveryPublisher.cpp  test_MqttClient.cpp
tests/parsers/: test_EDFParser.cpp  test_Fat32Parser.cpp  test_PLDParser.cpp  test_SA2Parser.cpp  test_STRParser.cpp  test_STRParser_ASV.cpp
tests/services/: test_BackfillService.cpp  test_BurstCollectorService.cpp  test_CpapDashSyncService.cpp  test_DataPublisherDeeper.cpp  test_DataPublisherService.cpp  test_FysetcReceiverService.cpp  test_FysetcSectorCollectorService.cpp  test_FysetcSniffService.cpp  test_LiveSleepStageRunner.cpp  test_O2RingCsvParser.cpp  test_OximetryService.cpp  test_PrismaIngestion.cpp  test_SessionDiscoveryService.cpp  test_SleepHqExportService.cpp  test_SupplyPublisher.cpp  test_SupplyStatus.cpp  test_sleep_stage_classifier.cpp
tests/utils/: test_AppConfig.cpp  test_CardResidue.cpp  test_ConfigManager.cpp  test_FailureLogThrottle.cpp
(+52 files in other folders)
